# SymbolicRegressionGPU.jl

./: .gitignore  Artifacts.toml  CITATION.md  Project.toml  README.md  compute_sha1.jl  debug.jl  example.jl  example2.jl  example3.jl  example_SR.jl  install.sh  testpycall.jl  testpycall_dyn.jl
.CondaPkg/: meta
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: benchmark_full.yml
THArrays.jl/csrc/: CMakeLists.txt
THArrays.jl/src/: THArrays.jl  ad.jl  common-methods.jl  scalar.jl  tensor.jl  th-jit.jl
THArrays.jl/src/compat/: tracker.jl
THArrays.jl/src/thc/: thc-generator.jl  thc-opt.jl  thc.jl
THArrays.jl/test/: grad.jl  issues.jl  scalar-creation.jl  simple-script.jl  tensor-arrayif.jl  tensor-creation.jl  tensor-indexing.jl  th_tr_mixed.jl
dev/: Project.toml  debug.jl
docs/: make.jl
docs/all_contributors/: .all-contributorsrc
examples/: parameterized_function.jl  template_expression_complex.jl
ext/: SymbolicRegressionEnzymeExt.jl  SymbolicRegressionJSON3Ext.jl  SymbolicRegressionSymbolicUtilsExt.jl
src/: Configure.jl  Core.jl  ExpressionBuilder.jl  MLJInterface.jl  MutationFunctions.jl  Options.jl  OptionsStruct.jl  PSRNfunctions.jl  PSRNfunctionsFlux.jl  PSRNfunctionsFlux_legacy.jl  PSRNfunctionsPY.jl  PSRNmodel.jl  PSRNmodelFlux.jl  PSRNmodelPY.jl  PSRNmodel_legacy.jl  PSRNoperatorsPY.jl  PSRNtharray.jl  ParametricExpression.jl  SearchUtils.jl  SymbolicRegression.jl  SymbolicRegressionGPU.jl  TemplateExpression.jl  precompile.jl
src/THArrays/: Project.toml
src/THArrays/csrc/: CMakeLists.txt
src/THArrays/src/: THArrays.jl  th-jit.jl
src/THArrays/src/thc/: thc-generator.jl
src/dr_mask/: 3_4_[Add_Mul_Identity_SemiSub_SemiDiv_Sin_Cos_Exp_Log_Sqrt]_mask.npy  3_5_[Add_Mul_Identity_Neg_Inv_Sin_Cos_Exp_Log_Sqrt]_mask.npy  3_5_[Add_Mul_Identity_SemiSub_SemiDiv_Neg_Inv_Sin_Cos_Exp_Log_Sqrt]_mask.npy  3_5_[Add_Mul_Identity_SemiSub_SemiDiv_Neg_Inv_Sin_Cos_Sqrt]_mask.npy  3_5_[Add_Mul_Identity_Sin_Cos_Exp_Log]_mask.npy  3_5_[Add_Mul_SemiDiv_Identity_Neg_Inv_Sqrt_Pow3]_mask.npy  3_5_[Add_Mul_SemiSub_Identity_Inv_Sin_Cos_Exp_Log_Sqrt_Pow3]_mask.npy  3_5_[Add_Mul_SemiSub_SemiDiv_Identity_Sin_Cos_Exp_Log_Sqrt]_mask.npy  3_5_[Add_Mul_SemiSub_SemiDiv_Identity_Sqrt]_mask.npy  3_5_[Add_Mul_Sub_Div_Identity_Pow2_Pow3_Sqrt]_mask.npy  3_5_[Add_Mul_Sub_Div_Identity_Pow2_Sqrt]_mask.npy  3_5_[Add_Mul_Sub_Div_Identity_Sin_Cos_Exp_Log_Sqrt_Pow2_Pow3]_mask.npy  3_5_[Add_Mul_Sub_Div_Identity_Sqrt]_mask.npy  3_6_[Add_Mul_Identity_Neg_Inv_Pow2_Sqrt]_mask.npy  3_6_[Add_Mul_Identity_Neg_Inv_Sin_Cos_Exp_Log_Sqrt]_mask.npy  3_6_[Add_Mul_Identity_SemiSub_SemiDiv_Sin_Cos_Exp_Log_Sqrt]_mask.npy  3_6_[Add_Mul_SemiDiv_Identity_Neg_Inv_Sqrt_Pow3]_mask.npy  3_6_[Add_Mul_SemiSub_Identity_Inv_Sin_Cos_Exp_Log_Sqrt_Pow3]_mask.npy  3_6_[Add_Mul_SemiSub_Identity_Neg_Inv_Sin_Cos_Exp_Log_Sqrt_Pow3]_mask.npy  3_6_[Add_Mul_SemiSub_SemiDiv_Identity_Neg_Inv_Pow2_Sqrt]_mask.npy  3_6_[Add_Mul_SemiSub_SemiDiv_Identity_Neg_Inv_Sqrt]_mask.npy  3_6_[Add_Mul_SemiSub_SemiDiv_Identity_Neg_Inv_Sqrt_Pow3]_mask.npy  3_6_[Add_Mul_SemiSub_SemiDiv_Identity_Sqrt]_mask.npy  3_6_[Add_Mul_SemiSub_SemiDiv_Identity_Sqrt_Pow3]_mask.npy  3_6_[Add_Mul_Sub_Div_Identity_Pow2_Sqrt]_mask.npy  3_6_[Add_Mul_Sub_Div_Identity_Sqrt]_mask.npy  3_7_[Add_Mul_Identity_Neg_Inv_Sin_Cos_Exp_Log_Sqrt]_mask.npy  3_7_[Add_Mul_SemiSub_Identity_Inv_Sin_Cos_Exp_Log_Sqrt_Pow3]_mask.npy  3_7_[Add_Mul_SemiSub_Identity_Neg_Inv_Sin_Cos_Exp_Log_Sqrt_Pow3]_mask.npy  3_7_[Add_Mul_SemiSub_SemiDiv_Identity_Neg_Inv_Pow2_Sqrt]_mask.npy  3_7_[Add_Mul_SemiSub_SemiDiv_Identity_Neg_Inv_Sqrt]_mask.npy  3_7_[Add_Mul_SemiSub_SemiDiv_Identity_Neg_Inv_Sqrt_Pow3]_mask.npy  3_7_[Add_Mul_SemiSub_SemiDiv_Identity_Sqrt]_mask.npy  3_7_[Add_Mul_SemiSub_SemiDiv_Identity_Sqrt_Pow3]_mask.npy  3_8_[Add_Mul_Identity_Neg_Inv_Sin_Cos_Exp_Log_Sqrt]_mask.npy  3_8_[Add_Mul_SemiDiv_Identity_Neg_Inv_Pow2_Sqrt]_mask.npy  3_8_[Add_Mul_SemiDiv_Identity_Neg_Inv_Sqrt_Pow3]_mask.npy  3_8_[Add_Mul_SemiSub_SemiDiv_Identity_Neg_Inv_Pow2_Sqrt]_mask.npy  3_8_[Add_Mul_SemiSub_SemiDiv_Identity_Sqrt]_mask.npy  3_9_[Add_Mul_Identity_Neg_Inv_Sin_Cos_Exp_Log_Sqrt]_mask.npy  (+1 more)
src/scripts/: fromfile_to_modules.sh
